--- a/shopManagerFrontEnd/src/App.css
+++ b/shopManagerFrontEnd/src/App.css
@@ -20,3 +20,53 @@
 .App-link {
   color: #09d3ac;
 }
+
+.CompomentBackend {
+  background-color: 	#b33d71;
+  height: 70%;
+  width: 70%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin-right: -50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+}
+
+.LoginItems {
+  position: relative;
+  top: 40%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.InputField {
+  display: block;
+  width: 50%;
+  margin: auto;
+  height: 34px;
+  margin-top: 30px;
+  padding: 6px 12px;
+  font-size: 14px;
+  line-height: 1.42857143;
+  color: #555;
+  background-color: #fff;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
+.InputButton {
+  display: block;
+  padding: 6px 12px;
+  margin: auto;
+  width: 50%;
+  font-size: 14px;
+  margin-top: 30px;
+  font-weight: normal;
+  line-height: 1.42857143;
+  text-align: center;
+  border: 1px solid transparent;
+  border-radius: 4px;
+  color: #fff;
+  background-color: #6f2f40;
+}
